--- a/composer.json
+++ b/composer.json
@@ -38,14 +38,16 @@
     },
     "require": {
         "php": ">=7.0"
+       
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0"
+        "phpunit/phpunit": "^6.0",
+        "squizlabs/php_codesniffer": "*"
     },
     "scripts": {
-        "test": "phpunit",
-        "test:cov": "phpunit --coverage-text --coverage-clover coverage.xml --coverage-html vendor/cov",
-        "cs:sniff": "phpcs",
-        "cs:fix": "phpcbf"
+        "test": "vendor/bin/phpunit",
+        "test:cov": "vendor/bin/phpunit --coverage-text --coverage-clover coverage.xml --coverage-html vendor/cov",
+        "cs:sniff": "vendor/bin/phpcs",
+        "cs:fix": "vendor/bin/phpcbf"
     }
 }
